--- a/src/pages/DetailPage.module.css
+++ b/src/pages/DetailPage.module.css
@@ -1,3 +1,8 @@
+.comment-content-wrapper {
+  max-height: 400px;
+  overflow: auto;
+}
+
 .comment-wrapper {
   display: flex;
   flex-direction: column;
@@ -14,10 +19,12 @@
 .push-comment-wrapper {
   margin-bottom: 50px;
 }
+
 .push-content {
   display: flex;
   align-items: center;
 }
+
 .user-avatar {
   border-radius: 50%;
   width: 50px;
@@ -25,6 +32,7 @@
   object-fit: cover;
   margin-right: 18px;
 }
+
 .input {
   outline: none;
   border-bottom: 1px solid #ccc;
@@ -39,6 +47,7 @@
   align-items: flex-start;
   margin-bottom: 20px;
 }
+
 .push-content-btn {
   display: flex;
   justify-content: flex-end;
@@ -59,6 +68,7 @@
   -ms-user-select: none;
   user-select: none;
 }
+
 .cancel:hover {
   background-color: #f2f3f5;
 }
@@ -68,6 +78,7 @@
   cursor: default;
   margin-left: 10px;
 }
+
 .active {
   background-color: #f05123;
   color: #fff;
@@ -79,5 +90,5 @@
   border-radius: 10px;
   padding: 9px 12px;
   display: flex;
-    text-align: justify;
+  text-align: justify;
 }
